# agentic-stock-intelligence

./: .gitignore
docs/: App_Server_Run_command.txt
docs/design/: Claude_multi-agent-stock-analysis-plan.md  OpenAI_agentic_stock_intelligence_system_preliminary_plan.md  agentic-stock-intelligence-architecture.md  complete-directory-structure.md  langgraph-architecture-changes.md
stock_intelligence_pipeline/backend/: celery_app.py  main.py  pyproject.toml
stock_intelligence_pipeline/backend/agents/: base_agent.py  fundamental_agent.py
stock_intelligence_pipeline/backend/api/v1/: executions.py  health.py  intents.py
stock_intelligence_pipeline/backend/config/: settings.py
stock_intelligence_pipeline/backend/graph/execution/: tracker.py
stock_intelligence_pipeline/backend/graph/intents/: analyze_stock.py  intent_registry.py  tasks.py
stock_intelligence_pipeline/backend/graph/state/: base_state.py
stock_intelligence_pipeline/backend/tools/: yfinance_tool.py
stock_intelligence_pipeline/backend/utils/: logging_config.py
stock_intelligence_pipeline/config/: app_config.example.yaml  app_config.yaml  logger_config.yaml
stock_intelligence_pipeline/frontend/: index.html  package-lock.json  package.json
stock_intelligence_pipeline/frontend/src/: App.css  App.tsx  vite-env.d.ts
stock_intelligence_pipeline/frontend/src/components/: ExecutionDetails.tsx  ExecutionList.tsx  IntentForm.tsx
stock_intelligence_pipeline/frontend/src/services/: api.ts
