[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.78.0",
    "celery>=5.6.2",
    "fastapi>=0.128.2",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "structlog>=25.5.0",
    "supabase>=2.27.3",
    "uvicorn[standard]>=0.40.0",
    "yfinance>=1.1.0",
]
